--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "file-saver": "^2.0.5",
     "firebase": "^10.12.1",
     "framer-motion": "^11.2.6",
